# Aura-DecentralTrust

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASE1_SUMMARY.md  README.md  RELEASE_NOTES_v0.1.6.md  SECURITY.md  SECURITY_NOTICE.md  TEST_COVERAGE_SUMMARY.md  codecov.yml  security_fixes_needed.md
.cargo/: audit.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  security_vulnerability.md
.github/workflows/: ci.yml  release.yml
aura-benchmarks/: Cargo.toml
aura-benchmarks/benches/: performance_benchmarks.rs
aura-benchmarks/src/: lib.rs
aura-common/: Cargo.toml
aura-common/src/: did.rs  errors.rs  lib.rs  types.rs  vc.rs
aura-crypto/: Cargo.toml
aura-crypto/src/: encryption.rs  hashing.rs  keys.rs  lib.rs  signing.rs
aura-ledger/: Cargo.toml
aura-ledger/:memory:/: 000008.sst  000009.sst  IDENTITY  LOG  LOG.old.1748843302213899  LOG.old.1748844245372194  MANIFEST-000011
aura-ledger/src/: blockchain.rs  consensus.rs  did_registry.rs  lib.rs  revocation_registry.rs  storage.rs  transaction.rs  vc_schema_registry.rs
aura-node/: Cargo.toml
aura-node/:memory:/: 000008.sst  000009.sst  IDENTITY  LOG  LOG.old.1748844697105582  MANIFEST-000011  OPTIONS-000007
aura-node/config/: credentials.toml
aura-node/src/: api.rs  api_nonce_tests.rs  audit.rs  auth.rs  auth_setup.rs  blockchain_integration_test.rs  cert_pinning.rs  config.rs  did_resolver.rs  did_resolver_simple_test.rs  error_sanitizer.rs  main.rs  network.rs  node.rs  nonce_tracker.rs  rate_limit.rs  signature_verification_tests.rs  simple_signature_test.rs  tls.rs  validation.rs
aura-tests/: Cargo.toml
aura-tests/proptest-regressions/property/: core_properties.txt
aura-tests/src/: lib.rs
aura-tests/src/benchmarks/: comprehensive_benchmarks.rs  crypto_benchmarks.rs  ledger_benchmarks.rs  mod.rs  wallet_benchmarks.rs
aura-tests/src/integration/: api_tests.rs  cli_tests.rs  mod.rs  unit_integration_tests.rs  workflow_tests.rs
aura-tests/src/property/: core_properties.rs  mod.rs
aura-wallet-core/: Cargo.toml
aura-wallet-core/src/: did_manager.rs  key_manager.rs  lib.rs  presentation_generator.rs  vc_store.rs  wallet.rs
config/: README.md  config.example.toml
docs/: DEVELOPMENT_STATUS_2025-06-01.md  DOCUMENTATION_UPDATES.md  PHASE1B_COMPLETION_SUMMARY.md  PHASE1_COMPLETION_REPORT.md  PHASE1_SUMMARY.md  README.md  RELEASE_PROCESS.md  RELEASE_v0.1.0_SUMMARY.md  SECURITY_AUDIT_2025-06-01.md  SECURITY_AUDIT_PHASE1.md  SECURITY_FIXES_2025-06-01.md  SECURITY_IMPLEMENTATION_GUIDE.md  SECURITY_REVIEW_NETWORK_API.md  TESTING_STRATEGY_COMPLETE.md  TEST_COMPLETION_SUMMARY_2025-12-01.md  TEST_COVERAGE_COMPREHENSIVE.md  TEST_COVERAGE_FINAL_2025-06-01.md  proj_outline.md
examples/: basic_usage.rs
scripts/: check-ci-status.sh  check-ci.sh  create_comprehensive_tests.sh  fix-clippy.sh  generate_coverage_report.sh  generate_secure_config.sh  generate_test_coverage.py  security_fixes.sh  test_rate_limit.sh  test_template.rs
tests/: api_integration_tests.rs  comprehensive_integration_tests.rs  end_to_end_integration_tests.rs  integration_test.rs  main_integration_tests.rs  property_tests.rs
to-dos/: ARCHITECTURE_DECISIONS.md  BENCHMARK_CONSOLIDATION_2025-06-01.md  BUILD_SUCCESS.md  CI_CD_CLIPPY_FIXES_2025-06-01.md  CI_CD_FIXES_2025-06-01.md  CI_CD_STATUS_2025-06-01.md  CONFIG_MIGRATION_SUMMARY.md  DESKTOP_WALLET_MVP.md  DEVELOPMENT_SESSION_2025-06-01.md  DEVELOPMENT_SUMMARY_2025-05-31.md  IMMEDIATE_NEXT_STEPS.md  MASTER_PHASE1-REAL_IMP.md  MASTER_TODO.md  MEMORY_UPDATE_2025-05-30.md  MEMORY_UPDATE_2025-05-31_CONFIG_MIGRATION.md  MEMORY_UPDATE_2025-05-31_FIXES.md  PHASE2_PLANNING.md  README.md  ROCKSDB_BUILD_GUIDE.md  SECURITY_IMPLEMENTATION_SESSION_SUMMARY.md  SESSION_SUMMARY_2025-05-30_BUILD_FIXES.md  SESSION_SUMMARY_2025-05-30_MAIN_BRANCH.md  SESSION_SUMMARY_2025-06-01_AFTERNOON_TESTING.md  SESSION_SUMMARY_2025-06-01_EVENING_v015.md  SESSION_SUMMARY_2025-06-02_PHASE1B_PROGRESS.md  SIMPLIFIED_IMPLEMENTATIONS_TRACKER.md  TECHNICAL_SPECIFICATIONS.md  TEST_COVERAGE_PROGRESS_2025-12-01_LEDGER_COMPLETE.md  TEST_COVERAGE_SESSION_2025-12-01.md  TEST_COVERAGE_SUMMARY.md  TEST_COVERAGE_SUMMARY_2025-06-01_WALLET_COMPLETE.md  TEST_FRAMEWORK_CONSOLIDATION_SUMMARY.md  USE_CASES_IMPLEMENTATION.md  WALLET_FEATURES_DETAILED.md
to-dos/Archive/: BUILD_SUCCESS_2025-06-01.md  CI_CD_SUCCESS_2025-06-01.md  CI_CD_TROUBLESHOOTING_2025-06-01.md  DEPENDENCY_UPDATE_GUIDE.md  HIGH_PRIORITY_FIXES_COMPLETED.md  MEMORY_UPDATE_2025-05-30_SECURITY.md  NODE_TESTING_SUMMARY.md  PHASE1_REMAINING_TASKS_2025-06-01.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SESSION_SUMMARY_2025-05-31_CONFIG_MIGRATION.md  SESSION_SUMMARY_2025-05-31_POST_SECURITY.md  TESTING_COMPLETE_SUMMARY.md  TEST_COVERAGE_PROGRESS_2025-06-01.md  TEST_FIX_PROGRESS_2025-06-01.md  TEST_FRAMEWORK_COMPLETION_2025-06-01.md  TEST_FRAMEWORK_PHASE1_STATUS.md  WARNING_FIXES_SUMMARY.md
