[workspace]
resolver = "2"
members = [
    "aura-ledger",
    "aura-wallet-core",
    "aura-node",
    "aura-common",
    "aura-crypto",
]

[workspace.package]
version = "0.1.0"
authors = ["Aura Development Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aura-decentraltrust/aura"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
sha2 = "0.10"
blake3 = "1.5"
aes-gcm = "0.10"
rand = "0.8"

# P2P Networking
libp2p = { version = "0.54", features = ["tokio", "gossipsub", "kad", "identify", "yamux", "noise", "tcp", "dns", "websocket"] }

# Database
rocksdb = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# DID/VC Standards
did_url = "0.1"
multibase = "0.9"
multicodec = "0.3"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
hex = "0.4"
toml = "0.8"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }

# Testing
proptest = "1.5"
criterion = "0.5"

[profile.release]
lto = true
opt-level = 3