[workspace]
resolver = "2"
members = [
    "aura-ledger",
    "aura-wallet-core",
    "aura-node",
    "aura-common",
    "aura-crypto",
]

[workspace.package]
version = "0.1.0"
authors = ["Aura Development Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aura-decentraltrust/aura"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1.88"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
bincode = "2.0.1"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde"] }
x25519-dalek = "2.0.1"
sha2 = "0.10.9"
blake3 = "1.8.2"
aes-gcm = "0.10.3"
rand = "0.8.5"

# P2P Networking
libp2p = { version = "0.55.0", features = ["tokio", "gossipsub", "kad", "identify", "yamux", "noise", "tcp", "dns", "websocket", "macros"] }

# Database
rocksdb = "0.23.0"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Time
chrono = { version = "0.4.41", features = ["serde"] }

# DID/VC Standards
# did_url = "0.1.0"  # Removed - not used and causes form_urlencoded issues
multibase = "0.9.1"
multicodec = "0.1.0"

# Utilities
uuid = { version = "1.17.0", features = ["v4", "serde"] }
hex = "0.4.3"
toml = "0.8.22"

# Web framework
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.4", features = ["cors"] }

# Testing
proptest = "1.6.0"
criterion = "0.6.0"

[profile.release]
lto = true
opt-level = 3