[package]
name = "aura-benchmarks"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "performance_benchmarks"
harness = false

[dependencies]
aura-common = { path = "../aura-common" }
aura-crypto = { path = "../aura-crypto" }
aura-ledger = { path = "../aura-ledger" }
aura-wallet-core = { path = "../aura-wallet-core" }
tempfile = "3.16"
tokio = { version = "1.45", features = ["full"] }
uuid = { version = "1.17", features = ["v4"] }
chrono = "0.4"
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }