[package]
name = "aura-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
multibase = { workspace = true }
multicodec = { workspace = true }
bincode = { workspace = true }
# did_url = { workspace = true }  # Removed - not used and causes form_urlencoded issues
