[package]
name = "aura-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-common = { path = "../aura-common" }
aura-crypto = { path = "../aura-crypto" }
aura-ledger = { path = "../aura-ledger" }
tokio = { workspace = true }
async-trait = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
toml = { workspace = true }
uuid = { workspace = true }
bincode = { workspace = true }
futures = "0.3"
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
jsonwebtoken = { workspace = true }
regex = "1.11"
once_cell = "1.21"
url = "2.5"
tokio-rustls = "0.26"
tokio-stream = { version = "0.1", features = ["net"] }
rustls = "0.23"
rustls-pemfile = "2.2"
rcgen = "0.13"
axum-server = { version = "0.7", features = ["tls-rustls"] }
