[package]
name = "aura-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-common = { path = "../aura-common" }
aura-crypto = { path = "../aura-crypto" }
aura-ledger = { path = "../aura-ledger" }
aura-wallet-core = { path = "../aura-wallet-core" }

# Testing dependencies
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-test = "0.4"
proptest = "1.6"
criterion = { version = "0.6", features = ["html_reports"] }
tempfile = "3.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
bincode = { workspace = true }
bs58 = "0.5"
toml = { workspace = true }

[[test]]
name = "integration"
path = "src/integration/mod.rs"
harness = true

[[test]]
name = "property"
path = "src/property/mod.rs"
harness = true

[[bench]]
name = "performance"
path = "src/benchmarks/mod.rs"
harness = false